// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VersionsInfoComponent initial rendering should show list of versions 1`] = `
<div
  id="root0"
>
  
  <div
    class="mat-typography version-list qa-version-list"
  >
    
    
    
    <em-working-version
      class="qa-version-testId"
      matripple=""
    />
    
    
    
    
    
    <em-version
      class="qa-version-testVariantId"
      matripple=""
    />
    
  </div>
  
</div>
`;

exports[`VersionsInfoComponent showing filter should not show filter for project branch of document 1`] = `
<div
  id="root6"
>
  
  <div
    class="mat-typography version-list qa-version-list"
  >
    
    
    
    <em-working-version
      class="qa-version-testId"
      matripple=""
    />
    
    
    
    
    
    <em-version
      class="qa-version-testVariantId"
      matripple=""
    />
    
  </div>
  
</div>
`;

exports[`VersionsInfoComponent showing filter should show filter for Core of document 1`] = `
<div
  id="root5"
>
  
  <div
    class="mat-typography version-list qa-version-list"
  >
    
    
    
    <em-working-version
      class="qa-version-testId"
      matripple=""
    />
    
    
    
    
    
    <em-version
      class="qa-version-testVariantId"
      matripple=""
    />
    
  </div>
  
</div>
`;
